--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Day03\Day03.csproj" />
     <ProjectReference Include="..\Day04\Day04.csproj" />
+    <ProjectReference Include="..\Day05\Day05.csproj" />
   </ItemGroup>
 
 </Project>
